# DLStoSF2

./: .gitignore  CMakeLists.txt  DLS2SF2.sln  DLS2SF2.vcxproj  DLS2SF2.vcxproj.filters  LICENSE  README.md
src/include/: dls2sf2.hpp
src/src/: dls2sf2.cpp  dls2sf2_internal.cpp  dls2sf2_internal.hpp  dls_converter.cpp  dls_parser.cpp  sf2_writer.cpp
test/: test.cpp
